# eventcommerce

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: app.py  main.py
backend/app/modules/inventory/api/schemas/: schemas.py
backend/app/modules/inventory/application/: release_inventory.py  reserve_inventory.py
backend/app/modules/inventory/domain/entities/: inventory.py
backend/app/modules/inventory/domain/errors/: domain_errors.py
backend/app/modules/inventory/domain/events/: inventory_events.py
backend/app/modules/inventory/domain/repositories/: repository.py
backend/app/modules/inventory/domain/services/: inventory_domain_service.py
backend/app/modules/inventory/domain/value_objects/: stock_quantity.py
backend/app/modules/inventory/infrastructure/repositories/: sqlalchemy_repository.py
backend/app/modules/inventory/tests/: test_placeholder.py
backend/app/modules/notifications/api/schemas/: schemas.py
backend/app/modules/notifications/application/: send_order_notification.py
backend/app/modules/notifications/tests/: test_placeholder.py
backend/app/modules/orders/application/: cancel_order.py  confirm_order.py  create_order.py  get_order.py  get_order_timeline.py
backend/app/modules/orders/tests/: test_placeholder.py
backend/app/modules/payments/application/: authorize_payment.py  process_payment_failure.py
backend/app/modules/payments/tests/: test_placeholder.py
backend/app/shared/config/: settings.py
backend/app/shared/db/: session.py
(+36 files in other folders)
